[package]
name = "hoax"
version = "1.0.0"
authors = ["FssAy <49795742+DmitrijVC@users.noreply.github.com>"]
description = "Simple procedural macro crate that \"hides\" any string literal in a plain sight."
keywords = ["string", "literal", "hide", "proc_macro", "procmacro"]
edition = "2018"
license = "MIT"
repository = "https://github.com/DmitrijVC/hoax/"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
